# fall-detection

./: CMakeLists.txt  README.md  circular_buffer.h  gait_analyzer.h  imusensor.cpp  imusensor.h  main.cpp  main.qml  matrix.h  orientation_filter.h  resources.qrc
